# odp

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Tiltfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
dataskope/: __main__.py
dataskope/cli/: __init__.py  main.py
dataskope/core/: detect_unused.py
docs/: announcement.md  index.md  modules.md
examples/snowflake/: info-schema.csv  query-history.csv
examples/snowflake-dagster-asset/: .env.example  .gitignore  README.md  example-dagster-odp-sensor.py  pyproject.toml  setup.cfg  setup.py
examples/snowflake-dagster-asset-check/: .env.example  README.md  pyproject.toml  setup.cfg  setup.py
examples/snowflake-dagster-asset-check/snowflake_dagster_asset_check/: __init__.py
examples/snowflake-dagster-asset-check/snowflake_dagster_asset_check/assets/: issues.py
examples/snowflake-dagster-asset-check/snowflake_dagster_asset_check/jobs/: __init__.py
examples/snowflake-dagster-asset-check/snowflake_dagster_asset_check/resources/: __init__.py
examples/snowflake-dagster-asset-check/snowflake_dagster_asset_check/schedules/: __init__.py
examples/snowflake-dagster-asset/snowflake_dagster_asset/: __init__.py
examples/snowflake-dagster-asset/snowflake_dagster_asset/assets/: constants.py  unused_tables.py
examples/snowflake-dagster-asset/snowflake_dagster_asset/jobs/: __init__.py
examples/snowflake-dagster-asset/snowflake_dagster_asset/resources/: __init__.py
examples/snowflake-dagster-asset/snowflake_dagster_asset/schedules/: __init__.py
examples/snowflake-dagster-metadata-job/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
examples/snowflake-dagster-metadata-job/snowflake_dagster_metadata_job/: __init__.py  assets.py  constants.py  jobs.py  resources.py  schedules.py
odp/: __main__.py
odp/cli/: main.py
odp/core/: detect_unused.py  snowflake.py  types.py
odp/odp/: __main__.py
odp/odp/cli/: __init__.py
tests/: test_count_usage_timeseries.py  test_detect_unused_tables.py  test_extract_tables.py  test_foo.py
